<resources>
    <string name="app_name">Tubonge</string>
    <string name="placeholder">Placeholder text</string>

    <!-- Empty state -->
    <string name="empty_inbox">No chats found</string>

    <!-- Info -->
    <string name="info_phone_number">Enter phone number to login</string>
    <string name="info_login">We will send you an SMS verification</string>
    <string name="info_login_verify">Please enter the code sent via SMS below</string>

    <!-- Buttons -->
    <string name="button_sign_in">SIGN IN</string>
    <string name="button_verify">VERIFY</string>
    <string name="button_change_phone">Change Number</string>

    <!-- Input hints -->
    <string name="hint_phone">Phone number</string>
    <string name="hint_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!-- Toolbar -->
    <string name="toolbar_register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
