<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.AuthActivity"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="@dimen/padding_large"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon"
            android:contentDescription="@string/placeholder"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/primaryTextDark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/padding_large"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_phone_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_input"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_large"
            android:gravity="center_vertical">

            <com.rilixtech.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_textSize="15sp"
                app:ccp_defaultNameCode="KE" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="15dp"
                android:id="@+id/phone_text"
                android:textSize="14sp"
                android:inputType="phone"
                android:hint="@string/phone_number"
                tools:ignore="Autofill"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_in"
            android:id="@+id/signinBtn"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:background="?selectableItemBackground"
            android:layout_marginTop="@dimen/padding_normal"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:alpha="0.6"
            android:text="@string/info_login"/>

    </LinearLayout>


</LinearLayout>